feat: add new pages and diagrams to enhance documentation structure and clarity

--- a/capitulos/ch1-introducao.tex
+++ b/capitulos/ch1-introducao.tex
@@ -26,4 +26,4 @@ Este documento foi produzido por:
 
 \end{itemize}
 
-% \vitor{Remover a \hl{marcação em amarelo} (comando \textbackslash hl\{\}) e comentarios do professor (comando \textbackslash vitor\{\}) de todo o documento.}
+\newpage
