--- a/capitulos/ch2-plataforma.tex
+++ b/capitulos/ch2-plataforma.tex
@@ -77,3 +77,5 @@ Na Tabela~\ref{tabela-software} vemos os softwares que apoiaram o desenvolviment
 		GitHub                            & -               & Plataforma de hospedagem de código-fonte                              & Utilizado para controle de versão e colaboração no desenvolvimento do código fonte do sistema. \\ \hline
 	\end{longtable}
 \end{footnotesize}
+
+\newpage
