--- a/capitulos/ch3-rnfs.tex
+++ b/capitulos/ch3-rnfs.tex
@@ -130,3 +130,5 @@ A Tabela~\ref{tabela-rnfs} apresenta a especificação dos requisitos não funci
 		\\\hline
 	\end{longtable}
 \end{footnotesize}
+
+\newpage
