--- a/capitulos/ch4-arquitetura.tex
+++ b/capitulos/ch4-arquitetura.tex
@@ -30,3 +30,5 @@ As camadas da arquitetura de cada subsistema são definidas como:
 A comunicação entre as camadas segue o padrão MVC, onde as páginas do front-end (CIU) chamam os adaptadores responsáveis pelas respostas via protocolo RESTful no back-end, acionando as classes controladoras (CIU), que interagem com as classes da camada de lógica de negócios (CLN) que, por sua vez, manipula as classes do domínio do problema (CDP) e se comunica com a camada de gerência de dados (CGD), a fim de persistir os registros da aplicação.
 
 \vspace{0.5cm}
+
+\newpage
