--- a/projeto-nomesistema.tex
+++ b/projeto-nomesistema.tex
@@ -288,6 +288,7 @@
 		3.0             & Pedro Quedevez       & 09/11/2025    & Projeto dos Componentes da Arquitetura (Cap. \ref{sec-componentes}).                                                         \\\hline
 		4.0             & Álvaro Alves         & 12/12/2025    & Alteração do Diagrama de Pacotes e descrição das camadas da arquitetura (Cap. \ref{sec-arquitetura}).                        \\\hline
 		4.1             & Pedro Quedevez       & 15/12/2025    & Revisão do Diagrama do Domínio (Cap. \ref{sec-componentes-cdp}).                                                             \\\hline
+		4.2             & Mateus Loss          & 16/12/2025    & Definição da Camada de Interface com o Usuário (Cap. \ref{sec-ciu}).                                                         \\\hline
 	\end{tabular}
 \end{center}
 \newpage
