feat: add bibliographic reference for Service Layer pattern in component design

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -11,6 +11,15 @@
   date      = {Sept.~4,\,2005}
 }
 
+@article{buschmann2007service,
+  author  = {Frank Buschmann and Regine Meunier and Hans Rohnert and Peter Sommerlad and Michael Stal},
+  title   = {Service Layer Pattern},
+  journal = {Pattern-Oriented Software Architecture, Volume 4, A Pattern Language for Distributed Computing},
+  pages   = {293--304},
+  year    = {2007},
+  publisher = {Wiley}
+}
+
 @article{qureshi2014mvc,
   author  = {M. R. Jameel Qureshi and Fatima Sabir},
   title   = {A comparison of Model View Controller and Model View Presenter},
