feat: add new figures and annotations to enhance CIU flow representation

--- a/capitulos/ch5-componentes.tex
+++ b/capitulos/ch5-componentes.tex
@@ -88,11 +88,15 @@ A seguir, são representados os principais fluxos da CIU:
 	\label{figura-ciu-cliente}
 \end{figure}
 
+\newpage
+
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1.0\textwidth,height=0.5\textheight]{figuras/ciu_agendamentos_filiais.png}
 	\caption{Fluxo de cadastro e gerenciamento de agendamentos e filiais}
 	\label{figura-ciu-agendamentos-filiais}
 \end{figure}
+
+\pedro{Na Figura~\ref{figura-ciu-agendamentos-filiais}, as setas entre views e controllers deveriam ser bidirecionais porém, devido limitações técnicas, as setas possuem apenas uma direção}
 
 \newpage
